# catweb_parser_go

./: .metadata  Makefile  README.md  build.cmd  ffi.go  ffigen.yaml  go.mod  js_test.go  mac_build.sh  main.go  pubspec.yaml
android/: build.gradle  settings.gradle
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/test/: test_ffi.dart
example/windows/: CMakeLists.txt
go/: Makefile  build.cmd  go.mod  go.sum  main.go  parser_test.go
go/models/: model.go  selector.go  selector_combine.go
go/parsers/: auto_complete_parser.go  detail_parser.go  image_reader_parser.go  list_parser.go  parser.go
go/results/: base.go  detail.go  image_reader.go  list.go
go/selector/: dom.go  html.go  json.go
go/test/: ffi_request.json  list_parser_test.go
go/utils/: utils.go
ios/: catweb_parser.podspec
lib/: catweb_parser.dart  catweb_parser_bindings_generated.dart
linux/: CMakeLists.txt
macos/: catweb_parser.podspec
macos/Classes/: catweb_parser.c  catweb_parser.h
models/: errors.go  parser.go  selector.go
parser/: auto_complete_parser.go  detail_parser.go  image_reader_parser.go  list_parser.go  parser_builder.go
parsers/: auto_complete_parser.go  detail_parser.go  image_reader_parser.go
results/: auto_complete.go  base.go  detail.go  image_reader.go  list.go
scripts/: build.cmd  build_windows.cmd  mac_build.sh
selector/: dom.go  html.go  json.go
src/: CMakeLists.txt  catweb_parser.c  catweb_parser.h
src/ios/: catweb_parser.h
utils/: utils.go
windows/: CMakeLists.txt
(+13 files in other folders)
